# ogl

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
examples/: CMakeLists.txt
examples/01_window/: CMakeLists.txt  main.cpp
examples/02_triangle/: CMakeLists.txt  main.cpp
examples/03_texture/: CMakeLists.txt  main.cpp
games/: CMakeLists.txt
games/breakout/: CMakeLists.txt  README.md  breakoutlayer.cpp  breakoutlayer.h  breakoutscene.h  constants.h  main.cpp  physics.h
games/flappybird/: CMakeLists.txt  README.md  ai.h  constants.h  flappylayer.cpp  flappylayer.h  flappyscene.h  main.cpp  mlai.h  model.onnx  onnxinference.cpp  onnxinference.h  physics.h  policyweights.h
games/flappybird/training/: README.md  onnx2header.py  requirements.txt  train.py
games/pong/: CMakeLists.txt  ai.h  constants.h  main.cpp  network.h  physics.h  ponglayer.cpp  ponglayer.h  pongscene.h
libraries/engine/: CMakeLists.txt
libraries/engine/autotests/: CMakeLists.txt  applicationtest.cpp  audiotest.cpp  camera2dtest.cpp  layertest.cpp  renderer2dtest.cpp  scenetest.cpp  shadertest.cpp  texturetest.cpp
libraries/engine/src/: CMakeLists.txt  application.cpp  application.h  audioclip.h  audioengine.h  camera2d.cpp  camera2d.h  components.h  entity.h  entity_impl.h  glfwwindow.cpp  glfwwindow.h  globject.h  layer.cpp  layer.h  layerstack.cpp  layerstack.h  miniaudioengine.cpp  miniaudioengine.h  openglrenderer.cpp  openglrenderer.h  renderer.h  renderer2d.cpp  renderer2d.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  window.h
meta/: build-vcpkg.py
meta/presets/: CMakeBasePresets.json  CMakeUnixPresets.json  CMakeWindowsPresets.json
meta/vcpkg-overlay-ports/onnxruntime/: fix-clang-compat.patch  portfile.cmake
